@@ -1,5 +1,7 @@
 package com.market_be.config;
 
+import com.market_be.entity.AppUser;
+import com.market_be.repository.AppUserRepository;
 import com.market_be.service.JwtService;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
@@ -8,20 +10,20 @@ import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpHeaders;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.Authentication;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
-import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
 @RequiredArgsConstructor
 public class JwtFilter extends OncePerRequestFilter {
 
     private final JwtService jwtService;
+    private final AppUserRepository appUserRepository;
 
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
@@ -30,24 +32,41 @@ public class JwtFilter extends OncePerRequestFilter {
         String path = request.getRequestURI();
 
         // 공개 경로는 필터 건너뛰기
-        if (path.equals("/") || path.equals("/login") || path.equals("/signup") || path.startsWith("/main")) {
+        if (path.equals("/") || path.startsWith("/login") || path.startsWith("/signup") || path.startsWith("/main")) {
             filterChain.doFilter(request, response);
             return;
         }
 
-        String jwtToken = request.getHeader(HttpHeaders.AUTHORIZATION);
-        if (jwtToken != null && jwtToken.startsWith("Bearer ")) {
-            String loginId = jwtService.parseToken(request);
-            if (loginId != null) {
-                Authentication authentication = new UsernamePasswordAuthenticationToken(
-                        loginId,
-                        null,
-                        Collections.emptyList());
-                SecurityContextHolder.getContext().setAuthentication(authentication);
+        String authorizationHeader = request.getHeader(HttpHeaders.AUTHORIZATION);
+
+        if (authorizationHeader != null && authorizationHeader.startsWith("Bearer ")) {
+            try {
+                String loginId = jwtService.parseToken(request);
+
+                if (loginId != null) {
+                    AppUser user = appUserRepository.findByLoginId(loginId)
+                            .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다: " + loginId));
+
+                    // Role 기반 권한 세팅
+                    List<SimpleGrantedAuthority> authorities = List.of(
+                            new SimpleGrantedAuthority("ROLE_" + user.getRole().name())
+                    );
+
+                    UsernamePasswordAuthenticationToken authentication =
+                            new UsernamePasswordAuthenticationToken(loginId, null, authorities);
+
+                    SecurityContextHolder.getContext().setAuthentication(authentication);
+                }
+
+            } catch (Exception e) {
+                // JWT 검증 실패 시 SecurityContext 초기화
+                SecurityContextHolder.clearContext();
+                response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                response.getWriter().write("유효하지 않은 토큰입니다.");
+                return;
             }
         }
 
         filterChain.doFilter(request, response);
     }
-
 }
